# cotizador-automatico-transportes

./: .env.example  .gitignore  ENTREGA.md  Makefile  README.md  pyproject.toml  setup.py
data/: emails.json
docs/: README-1-pagina.md  auditoria-tecnica.md  demo-video-guion.md  demo.md  google-sheets-apps-script.js  model-comparison.md  priorizacion-mejoras.md
flows/: automation-flow.md
frontend/: .env.example  README.md  index.html  tailwind.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/cotizador/: EmailResultCard.tsx  MetricCard.tsx  StatusBadges.tsx
frontend/src/components/theme/: ThemeToggle.tsx
frontend/src/lib/: api.ts
frontend/src/lib/cotizador/: classifier.ts  emails.ts  mockClient.ts  presentation.ts  quote.ts  rules.ts  (+1 more)
frontend/src/pages/: Index.tsx
frontend/src/test/: cotizador.test.ts
prompts/: final-response-prompt.md
scripts/: run_model_comparison.py
src/cotizador/: __init__.py
src/cotizador/application/: ports.py  process_inbox.py
src/cotizador/classifier/: __init__.py  rule_based.py
src/cotizador/config/: __init__.py  business_rules.py  env.py
src/cotizador/domain/: entities.py  money.py  rates.py  services.py  text.py
src/cotizador/infrastructure/: json_email_repository.py  publishers.py
src/cotizador/integrations/: __init__.py  email_sender.py  publishers.py
src/cotizador/presentation/: api.py  cli.py
src/cotizador/quotation/: __init__.py  calculator.py  extractor.py
src/cotizador/responder/: __init__.py  templates.py
tests/: test_api_contract.py  test_domain_rules.py  test_quote_flow.py
